Added period to description.

--- a/locale/en/strings.cfg
+++ b/locale/en/strings.cfg
@@ -7,4 +7,4 @@ aio-assembly-1=All in One Assembly
 aio-assembly-1=All in One Assembly
 
 [item-description]
-aio-assembly-1=An all in one assembling machine
+aio-assembly-1=An all in one assembling machine.
