Added Unlocks for AIO1

--- a/locale/en/strings.cfg
+++ b/locale/en/strings.cfg
@@ -1,5 +1,8 @@
 aio-assembly-1=All in One Assembly
 
+[achievement-name]
+logistically-challenged=Logistically Challenged
+
 [entity-name]
 aio-assembly-1=All in One Assembly
 
@@ -8,3 +11,6 @@ aio-assembly-1=All in One Assembly
 
 [item-description]
 aio-assembly-1=An all in one assembling machine.
+
+[technology-name]
+compressed-logistics=Compressed Logistics
