--- a/locale/en/strings.cfg
+++ b/locale/en/strings.cfg
@@ -8,9 +8,11 @@ aio-assembly-1=All in One Assembly
 
 [item-name]
 aio-assembly-1=All in One Assembly
+aio-frame=AIO Structure Frame
 
 [item-description]
 aio-assembly-1=An all in one assembling machine.
+aio-frame=Structure frame for AIO machines.
 
 [technology-name]
 compressed-logistics=Compressed Logistics
